Separate jupyter notebook environment from package project

--- a/LeNet-Training.ipynb
+++ b/LeNet-Training.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1mActivating\u001b[22m\u001b[39m environment at `~/LeNet.jl/Project.toml`\n",
+      "\u001b[32m\u001b[1mActivating\u001b[22m\u001b[39m environment at `~/LeNet.jl/jupyter/Project.toml`\n",
       "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m registry at `~/.julia/registries/General`\n",
       "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m git-repo `https://github.com/JuliaRegistries/General.git`\n",
       "\u001b[?25l\u001b[2K\u001b[?25h"
@@ -18,7 +18,7 @@
    ],
    "source": [
     "import Pkg\n",
-    "Pkg.activate(\".\")\n",
+    "Pkg.activate(\"jupyter\")\n",
     "Pkg.instantiate()"
    ]
   },
@@ -176,13 +176,13 @@
      "text": [
       "params(model) = Param[P(KnetArray{Float32,4}(5,5,1,6)), P(KnetArray{Float32,4}(1,1,6,1)), P(KnetArray{Float32,4}(5,5,6,16)), P(KnetArray{Float32,4}(1,1,16,1)), P(KnetArray{Float32,4}(5,5,16,120)), P(KnetArray{Float32,4}(1,1,120,1)), P(KnetArray{Float32,2}(84,120)), P(KnetArray{Float32,1}(84)), P(KnetArray{Float32,2}(10,84)), P(KnetArray{Float32,1}(10))]\n",
       "[Before Training]\n",
-      "accuracy(train_data) = 11.073333 %\n",
-      "accuracy(test_data) = 11.120000 %\n",
+      "accuracy(train_data) = 4.628333 %\n",
+      "accuracy(test_data) = 4.490000 %\n",
       "[Training...]\n",
-      "┣████████████████████┫ [100.00%, 30720/30720, 06:45/06:45, 75.76i/s] \n",
+      "┣████████████████████┫ [100.00%, 30720/30720, 07:47/07:47, 65.83i/s] \n",
       "[After Training]\n",
-      "accuracy(train_data) = 98.256667 %\n",
-      "accuracy(test_data) = 98.060000 %\n",
+      "accuracy(train_data) = 98.185000 %\n",
+      "accuracy(test_data) = 98.070000 %\n",
       "length(acc_train) = 257\n"
      ]
     },
@@ -228,42 +228,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "257-element Array{Float64,1}:\n",
-       " 0.1112\n",
-       " 0.3806\n",
-       " 0.5739\n",
-       " 0.5998\n",
-       " 0.6987\n",
-       " 0.7602\n",
-       " 0.8106\n",
-       " 0.8377\n",
-       " 0.8549\n",
-       " 0.8634\n",
-       " 0.8732\n",
-       " 0.8808\n",
-       " 0.8854\n",
+       " 0.0449\n",
+       " 0.4494\n",
+       " 0.6418\n",
+       " 0.6952\n",
+       " 0.7172\n",
+       " 0.7727\n",
+       " 0.8136\n",
+       " 0.8345\n",
+       " 0.8521\n",
+       " 0.8628\n",
+       " 0.8711\n",
+       " 0.8792\n",
+       " 0.8856\n",
        " ⋮     \n",
-       " 0.9798\n",
-       " 0.9798\n",
-       " 0.9799\n",
-       " 0.9799\n",
-       " 0.9799\n",
-       " 0.9799\n",
-       " 0.98  \n",
-       " 0.9801\n",
-       " 0.9802\n",
+       " 0.9803\n",
+       " 0.9803\n",
+       " 0.9803\n",
+       " 0.9803\n",
        " 0.9804\n",
        " 0.9804\n",
-       " 0.9806"
+       " 0.9804\n",
+       " 0.9803\n",
+       " 0.9804\n",
+       " 0.9805\n",
+       " 0.9807\n",
+       " 0.9807"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
