--- a/LeNet-Training.ipynb
+++ b/LeNet-Training.ipynb
@@ -12,7 +12,7 @@
       "\u001b[32m\u001b[1mActivating\u001b[22m\u001b[39m environment at `~/LeNet.jl/jupyter/Project.toml`\n",
       "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m registry at `~/.julia/registries/General`\n",
       "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m git-repo `https://github.com/JuliaRegistries/General.git`\n",
-      "\u001b[?25l\u001b[2K\u001b[?25h"
+      "\u001b[2K\u001b[?25h[1mFetching:\u001b[22m\u001b[39m [========================================>]  100.0 %.0 %"
      ]
     }
    ],
@@ -55,6 +55,14 @@
    "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Precompiling LeNet [59d537c7-900a-4367-85e8-51a37eacc432]\n",
+      "└ @ Base loading.jl:1242\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -176,13 +184,13 @@
      "text": [
       "params(model) = Param[P(KnetArray{Float32,4}(5,5,1,6)), P(KnetArray{Float32,4}(1,1,6,1)), P(KnetArray{Float32,4}(5,5,6,16)), P(KnetArray{Float32,4}(1,1,16,1)), P(KnetArray{Float32,4}(5,5,16,120)), P(KnetArray{Float32,4}(1,1,120,1)), P(KnetArray{Float32,2}(84,120)), P(KnetArray{Float32,1}(84)), P(KnetArray{Float32,2}(10,84)), P(KnetArray{Float32,1}(10))]\n",
       "[Before Training]\n",
-      "accuracy(train_data) = 4.628333 %\n",
-      "accuracy(test_data) = 4.490000 %\n",
+      "accuracy(train_data) = 3.736667 %\n",
+      "accuracy(test_data) = 3.810000 %\n",
       "[Training...]\n",
-      "┣████████████████████┫ [100.00%, 30720/30720, 07:47/07:47, 65.83i/s] \n",
+      "┣████████████████████┫ [100.00%, 30720/30720, 09:45/09:45, 52.51i/s] \n",
       "[After Training]\n",
-      "accuracy(train_data) = 98.185000 %\n",
-      "accuracy(test_data) = 98.070000 %\n",
+      "accuracy(train_data) = 98.221667 %\n",
+      "accuracy(test_data) = 98.150000 %\n",
       "length(acc_train) = 257\n"
      ]
     },
@@ -235,32 +243,32 @@
      "data": {
       "text/plain": [
        "257-element Array{Float64,1}:\n",
-       " 0.0449\n",
-       " 0.4494\n",
-       " 0.6418\n",
-       " 0.6952\n",
-       " 0.7172\n",
-       " 0.7727\n",
-       " 0.8136\n",
-       " 0.8345\n",
-       " 0.8521\n",
-       " 0.8628\n",
-       " 0.8711\n",
-       " 0.8792\n",
-       " 0.8856\n",
+       " 0.0381\n",
+       " 0.3214\n",
+       " 0.5301\n",
+       " 0.5624\n",
+       " 0.6313\n",
+       " 0.7161\n",
+       " 0.7934\n",
+       " 0.8317\n",
+       " 0.8511\n",
+       " 0.864 \n",
+       " 0.8718\n",
+       " 0.8767\n",
+       " 0.8837\n",
        " ⋮     \n",
-       " 0.9803\n",
-       " 0.9803\n",
-       " 0.9803\n",
-       " 0.9803\n",
-       " 0.9804\n",
-       " 0.9804\n",
-       " 0.9804\n",
-       " 0.9803\n",
-       " 0.9804\n",
-       " 0.9805\n",
-       " 0.9807\n",
-       " 0.9807"
+       " 0.981 \n",
+       " 0.981 \n",
+       " 0.981 \n",
+       " 0.981 \n",
+       " 0.981 \n",
+       " 0.981 \n",
+       " 0.9812\n",
+       " 0.9812\n",
+       " 0.9813\n",
+       " 0.9815\n",
+       " 0.9815\n",
+       " 0.9815"
       ]
      },
      "execution_count": 7,
