--- a/LeNet-Training.ipynb
+++ b/LeNet-Training.ipynb
@@ -12,7 +12,7 @@
       "\u001b[32m\u001b[1mActivating\u001b[22m\u001b[39m environment at `~/LeNet.jl/jupyter/Project.toml`\n",
       "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m registry at `~/.julia/registries/General`\n",
       "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m git-repo `https://github.com/JuliaRegistries/General.git`\n",
-      "\u001b[2K\u001b[?25h[1mFetching:\u001b[22m\u001b[39m [========================================>]  100.0 %.0 %"
+      "\u001b[?25l\u001b[2K\u001b[?25h"
      ]
     }
    ],
@@ -59,8 +59,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "┌ Info: Precompiling LeNet [59d537c7-900a-4367-85e8-51a37eacc432]\n",
-      "└ @ Base loading.jl:1242\n"
+      "┌ Info: Recompiling stale cache file /home/david.lin/.julia/compiled/v1.2/LeNet/7dzcS.ji for LeNet [59d537c7-900a-4367-85e8-51a37eacc432]\n",
+      "└ @ Base loading.jl:1240\n"
      ]
     },
     {
@@ -179,25 +179,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "params(model) = Param[P(KnetArray{Float32,4}(5,5,1,6)), P(KnetArray{Float32,4}(1,1,6,1)), P(KnetArray{Float32,4}(5,5,6,16)), P(KnetArray{Float32,4}(1,1,16,1)), P(KnetArray{Float32,4}(5,5,16,120)), P(KnetArray{Float32,4}(1,1,120,1)), P(KnetArray{Float32,2}(84,120)), P(KnetArray{Float32,1}(84)), P(KnetArray{Float32,2}(10,84)), P(KnetArray{Float32,1}(10))]\n",
-      "[Before Training]\n",
-      "accuracy(train_data) = 3.736667 %\n",
-      "accuracy(test_data) = 3.810000 %\n",
-      "[Training...]\n",
-      "┣████████████████████┫ [100.00%, 30720/30720, 09:45/09:45, 52.51i/s] \n",
-      "[After Training]\n",
-      "accuracy(train_data) = 98.221667 %\n",
-      "accuracy(test_data) = 98.150000 %\n",
-      "length(acc_train) = 257\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "257"
+       "LeNet5(P(KnetArray{Float32,4}(5,5,1,6)), P(KnetArray{Float32,4}(1,1,6,1)), P(KnetArray{Float32,4}(5,5,6,16)), P(KnetArray{Float32,4}(1,1,16,1)), P(KnetArray{Float32,4}(5,5,16,120)), P(KnetArray{Float32,4}(1,1,120,1)), P(KnetArray{Float32,2}(84,120)), P(KnetArray{Float32,1}(84)), P(KnetArray{Float32,2}(10,84)), P(KnetArray{Float32,1}(10)))"
       ]
      },
      "execution_count": 6,
@@ -209,11 +193,80 @@
     "using LeNet, IterTools, Printf\n",
     "\n",
     "# new model\n",
-    "model = LeNet5()\n",
-    "@show params(model)\n",
-    "\n",
-    "acc_train = [accuracy(model, train_data_chk)]\n",
-    "acc_test = [accuracy(model, test_data_chk)]\n",
+    "model = LeNet5()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "last(model(convert(ATYPE, train_images[:, :, 1:1]))) = K32(10,1)[0.09051789⋯]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "10×1 KnetArray{Float32,2}:\n",
+       " 0.09051789 \n",
+       " 0.09824963 \n",
+       " 0.10313971 \n",
+       " 0.097146004\n",
+       " 0.09782959 \n",
+       " 0.10080274 \n",
+       " 0.10544741 \n",
+       " 0.10385446 \n",
+       " 0.10278056 \n",
+       " 0.10023204 "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@show last(model(convert(ATYPE, train_images[:,:,1:1])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Before Training]\n",
+      "accuracy(train_data) = 3.573333 %\n",
+      "accuracy(test_data) = 3.290000 %\n",
+      "[Training...]\n",
+      "┣████████████████████┫ [100.00%, 30720/30720, 09:42/09:42, 52.83i/s] \n",
+      "[After Training]\n",
+      "accuracy(train_data) = 98.183333 %\n",
+      "accuracy(test_data) = 98.110000 %\n",
+      "length(acc_train) = 257\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "257"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "acc_train = [accuracy(x -> last(model(x)), train_data_chk)]\n",
+    "acc_test = [accuracy(x -> last(model(x)), test_data_chk)]\n",
     "\n",
     "@printf \"[Before Training]\\n\"\n",
     "@printf \"accuracy(train_data) = %f %%\\n\" acc_train[end]*100\n",
@@ -223,8 +276,8 @@
     "#adam(model, ncycle(train_batches, 12); lr=0.001) |> progress!\n",
     "for (i, dx) in enumerate(fit(model, ncycle(train_batches, 256)) |> progress)\n",
     "    if i % num_batches == 0\n",
-    "        push!(acc_train, accuracy(model, train_data_chk))\n",
-    "        push!(acc_test, accuracy(model, test_data_chk))\n",
+    "        push!(acc_train, accuracy(x -> last(model(x)), train_data_chk))\n",
+    "        push!(acc_test, accuracy(x -> last(model(x)), test_data_chk))\n",
     "    end\n",
     "end\n",
     "\n",
@@ -236,42 +289,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "257-element Array{Float64,1}:\n",
-       " 0.0381\n",
-       " 0.3214\n",
-       " 0.5301\n",
-       " 0.5624\n",
-       " 0.6313\n",
-       " 0.7161\n",
-       " 0.7934\n",
-       " 0.8317\n",
-       " 0.8511\n",
-       " 0.864 \n",
-       " 0.8718\n",
-       " 0.8767\n",
-       " 0.8837\n",
+       " 0.0329\n",
+       " 0.398 \n",
+       " 0.6475\n",
+       " 0.6864\n",
+       " 0.7129\n",
+       " 0.7992\n",
+       " 0.8435\n",
+       " 0.8598\n",
+       " 0.8711\n",
+       " 0.8751\n",
+       " 0.8789\n",
+       " 0.884 \n",
+       " 0.8877\n",
        " ⋮     \n",
+       " 0.9806\n",
+       " 0.9807\n",
+       " 0.9808\n",
+       " 0.9808\n",
+       " 0.9808\n",
+       " 0.9808\n",
+       " 0.9808\n",
+       " 0.9808\n",
+       " 0.9808\n",
+       " 0.9809\n",
        " 0.981 \n",
-       " 0.981 \n",
-       " 0.981 \n",
-       " 0.981 \n",
-       " 0.981 \n",
-       " 0.981 \n",
-       " 0.9812\n",
-       " 0.9812\n",
-       " 0.9813\n",
-       " 0.9815\n",
-       " 0.9815\n",
-       " 0.9815"
+       " 0.9811"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
